<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.activities.ExtendedInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/extend_txt_log_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/log_name"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/extend_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.15"
            android:alpha="0.85"
            android:contentDescription="@string/go_back_to_record_list"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/extend_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/hidden_pass"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/current_password_information"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/start_date_current"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/extend_txt_start_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/_31_12_9999"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/days_in_use"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/extend_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="180"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:progress="90"
            android:scaleY="3" />

        <TextView
            android:id="@+id/extend_txt_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            android:text="@string/_999"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/extend_btn_show"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/show_passwords"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/archive_password_information"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtStartDateTop"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/start_date"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEndDateTop"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/end_date"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDaysTop"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.10"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/days"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPassTop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/passwords"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/extend_archive_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>