<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".GenerateActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/gen_pass"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:text="Generate Password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingEnd="5sp"
            android:paddingStart="10sp"
            android:paddingTop="5sp"
            android:text="@string/length"
            android:textColor="#000"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/lenSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:paddingTop="5sp"
            android:progress="2" />

        <TextView
            android:id="@+id/lenNum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingEnd="10sp"
            android:paddingStart="5sp"
            android:paddingTop="5sp"
            android:text="@string/_11"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/digitCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:checked="true"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/digits"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/upperCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:checked="true"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/upper_case"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ratioTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:text="@string/lower_case_ratio"
                android:textColor="#000"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/ratioSeekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="50"
                android:progress="40" />

            <TextView
                android:id="@+id/ratioNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:paddingEnd="10sp"
                android:paddingStart="5sp"
                android:paddingTop="5sp"
                android:text="@string/_0_8"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textPassGen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/generatedpassword"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnGen"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate" />

        <Button
            android:id="@+id/btnCopy"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/copy" />
    </LinearLayout>

</LinearLayout>